<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_outline_menu_book_24"
            android:title="@string/menu_labmanual" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_bookmark_add_24"
            android:title="@string/menu_solved_lab_manual" />

        <item
            android:id="@+id/nav_lib"
            android:icon="@drawable/ic_outline_local_library_24"
            android:title="@string/library" />

        <item android:id="@+id/nav_requested_books"
            android:icon="@drawable/ic_outline_library_books_24"
            android:title="@string/Requested_books" />

        <item android:id="@+id/nav_upload_course"
            android:icon="@drawable/training"
            android:title="@string/UploadCourse" />


        <item android:id="@+id/nav_upload_stream"
            android:icon="@drawable/stream"
            android:title="@string/UploadStream" />

        <item android:id="@+id/nav_practice_set"
            android:icon="@drawable/practice"
            android:title="@string/PracticeSet" />

    </group>

</menu>