<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.guruprasad.notesuplaoder.ui.Notes_upload.Notes_fragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.guruprasad.notesuplaoder.ui.Lab_manual_upload.lab_manual_fragment"
        android:label="@string/menu_labmanual"
        tools:layout="@layout/fragment_lab_manual" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.guruprasad.notesuplaoder.ui.solved_lab_manual_upload.solved_lab_manual_fragment"
        android:label="@string/menu_solved_lab_manual"
        tools:layout="@layout/fragment_solved_labmanual" />

    <fragment
        android:id="@+id/nav_lib"
        android:name="com.guruprasad.notesuplaoder.ui.Library.pithos_library"
        android:label="@string/library"
        tools:layout="@layout/fragment_pithos_library" />

    <fragment
        android:id="@+id/nav_requested_books"
        android:name="com.guruprasad.notesuplaoder.ui.Requested_Data.Requested_Books"
        android:label="@string/Requested_books"
        tools:layout="@layout/fragment_requested_books" />

    <fragment
        android:id="@+id/nav_upload_course"
        android:name="com.guruprasad.notesuplaoder.ui.Course.Upload_Course"
        android:label="@string/UploadCourse"
        tools:layout="@layout/fragment_upload__course" />

</navigation>